--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Matt East Portfolio</title>
@@ -30,7 +26,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/macbook2.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Python</h2>
@@ -41,7 +37,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/macbook.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>SwiftUI</h2>
