--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/macbook2.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Python</h2>
@@ -37,7 +37,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/macbook.jpg" alt="" />
+										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>SwiftUI</h2>
