--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 							<header>
 								<h1>Matt East, Portfolio.</h1>
-								<p>In 2021 I decided to take a leap into the world of programing. This is what I have to show for it so far.</p>
+								<p>In 2021 I decided to take a leap into the world of programing. This is what I have to show so far.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -57,39 +57,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Résumé</h2>
-										<div class="content">
-											<p>View my up to date résumé. </p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Résumé</h2>
-										<div class="content">
-											<p>View my up to date résumé. </p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Résumé</h2>
-										<div class="content">
-											<p>View my up to date résumé. </p>
-										</div>
-									</a>
-								</article>
+								
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
