--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="python.html">
 										<h2>SwiftUI</h2>
 										<div class="content">
 											<p>Projects in which I have used Swift/SwiftUI as my primary programming language.</p>
