--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="python.html">
 										<h2>Python</h2>
 										<div class="content">
 											<p>Projects in which I have used Python as my primary programming language.</p>
