--- a/resume.html
+++ b/resume.html
@@ -36,9 +36,9 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Python</a></li>
-							<li><a href="generic.html">SwiftUI</a></li>
-							<li><a href="generic.html">Résumé</a></li>
+							<li><a href="python.html">Python</a></li>
+							<li><a href="swiftui.html">SwiftUI</a></li>
+							<li><a href="resume.html">Résumé</a></li>
 						</ul>
 					</nav>
 
@@ -89,7 +89,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Matt East. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
