--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="python.html">Python</a></li>
-							<li><a href="swiftui.html">SwiftUI</a></li>
+							<li><a href="swift.html">Swift</a></li>
 							<li><a href="resume.html">Résumé</a></li>
 						</ul>
 					</nav>
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<header>
 								<h1>Matt East, Portfolio.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<p>In 2021 I decided to take the leap into computer programing. This is what I have to show so far.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -56,7 +56,7 @@
 									<a href="python.html">
 										<h2>Python</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Projects in which I have used Python as the primary programing language.</p>
 										</div>
 									</a>
 								</article>
@@ -64,10 +64,10 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="swiftui.html">
-										<h2>SwiftUI</h2>
+									<a href="swift.html">
+										<h2>Swift</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Projects in which I have used Swift as the primary programing language.</p>
 										</div>
 									</a>
 								</article>
