--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="python.html">Python</a></li>
-							<li><a href="swiftui.html">SwiftUI</a></li>
+							<li><a href="swift.html">Swift</a></li>
 							<li><a href="resume.html">Résumé</a></li>
 						</ul>
 					</nav>
