--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 							<header>
 								<h1>Matt East, Portfolio.</h1>
 								<p>In 2021 I decided to take the leap into computer programing. This is what I have to show so far.</p>
+								<p>I am currently based in Leeds, UK.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -78,7 +79,7 @@
 									<a href="resume.html">
 										<h2>Résumé</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>My up to date Résumé.</p>
 										</div>
 									</a>
 								</article>
