--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<header>
 								<h1>Matt East, Portfolio.</h1>
-								<p>In 2021 I decided to take the leap into computer programing. This is what I have to show so far.</p>
+								<p>2021 was the year I took the leap into computer programing. This is what I have to show so far.</p>
 								<p>I am currently based in Leeds, UK.</p>
 							</header>
 							<section class="tiles">
