--- a/index.html
+++ b/index.html
@@ -208,8 +208,7 @@
 								<h2>Follow</h2>
 								<ul class="icons">
 									<li><a href="https://www.instagram.com/matteastdev" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://github.com/mattonelife" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
