--- a/swift.html
+++ b/swift.html
@@ -51,9 +51,9 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="python.html">
-										<h2>Python</h2>
+										<h2>Landmarks</h2>
 										<div class="content">
-											<p>Projects in which I have used Python as the primary programing language.</p>
+											<p>Official Swift UI Tutorial.</p>
 										</div>
 									</a>
 								</article>
