--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Matt East Portfolio</title>
+		<title>Matt East</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -41,8 +41,9 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Matt East, Portfolio.</h1>
-								<p>2021 was the year I took the leap into programing and app development. This is what I have created so far.</p>
+								<h1>Matt East</h1>
+								<p>Site currently under construction.</p>
+								<p>2021 was the year I took the leap into programing and app development. This is a showcase of my work and my journey towards becoming a software developer.</p>
 								<p>I am currently based in Leeds, UK.</p>
 							</header>
 							<section class="tiles">
