--- a/swift_landmarks.html
+++ b/swift_landmarks.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>Python Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -41,44 +41,9 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Swift UI Projects</h1>
+							<h1>Landmarks SwiftUI</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>Text</p>
-
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="swift_landmarks.html">
-										<h2>Landmarks</h2>
-										<div class="content">
-											<p>Official Swift UI Tutorial.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="swift.html">
-										<h2>Swift</h2>
-										<div class="content">
-											<p>Projects in which I have used Swift as the primary programing language.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="resume.html">
-										<h2>Résumé</h2>
-										<div class="content">
-											<p>My up to date Résumé.</p>
-										</div>
-									</a>
-								</article>
 						</div>
 					</div>
 
