--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<header>
 								<h1>Matt East</h1>
 								<p>Site currently under construction.</p>
-								<p>2021 was the year I took the leap into programing and app development. This is a showcase of my work and my journey towards becoming a software developer.</p>
+								<p>2021 was the year I took the leap into programing and app development. This is a showcase of my work and my journey towards software development.</p>
 								<p>I am currently based in Leeds, UK.</p>
 							</header>
 							<section class="tiles">
