--- a/swift_landmarks.html
+++ b/swift_landmarks.html
@@ -42,7 +42,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Landmarks SwiftUI</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<span class="image main"><img src="images/macbook.jpg" alt="" /></span>
 							<p>Text</p>
 						</div>
 					</div>
