--- a/python.html
+++ b/python.html
@@ -42,8 +42,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Python Projects</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Text</p>
+							
 
                             <section class="tiles">
 								<article class="style1">
@@ -51,13 +50,13 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="python.html">
-										<h2>Python</h2>
+										<h2>300 Hours</h2>
 										<div class="content">
-											<p>Projects in which I have used Python as the primary programing language.</p>
+											<p>300 hours of Python, freecodecamp.org</p>
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<!--<article class="style2">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
@@ -78,7 +77,7 @@
 											<p>My up to date Résumé.</p>
 										</div>
 									</a>
-								</article>
+								</article>-->
 						</div>
 					</div>
 
