--- a/python.html
+++ b/python.html
@@ -49,7 +49,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="python.html">
+									<a href="python_300days.html">
 										<h2>300 Hours</h2>
 										<div class="content">
 											<p>300 hours of Python, freecodecamp.org</p>
@@ -91,7 +91,7 @@
                         <section>
                             <h2>Follow</h2>
                             <ul class="icons">
-                                <li><a href="https://www.instagram.com/matteastdev" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+                                <li><a href="https://www.instagram.com/mattonelife" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
                                 <li><a href="https://github.com/mattonelife" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
                             </ul>
                         </section>
