--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 						<section>
 							<h2>Follow</h2>
 							<ul class="icons">
-								<li><a href="https://www.instagram.com/matteastdev" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/mattonelife" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/mattonelife" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
