--- a/swift.html
+++ b/swift.html
@@ -56,7 +56,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<!--<article class="style2">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
@@ -77,7 +77,7 @@
 											<p>My up to date Résumé.</p>
 										</div>
 									</a>
-								</article>
+								</article>-->
 						</div>
 					</div>
 
@@ -91,7 +91,7 @@
 						<section>
 							<h2>Follow</h2>
 							<ul class="icons">
-								<li><a href="https://www.instagram.com/matteastdev" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/mattonelife" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/mattonelife" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
