--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Matt East</title>
+		<title>Matt East Dev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -41,7 +41,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Matt East</h1>
+								<h1>Matt East Dev</h1>
 								<p>Site currently under construction.</p>
 								<p>2021 was the year I took the leap into programing and app development. This is a showcase of my work and my journey towards software development.</p>
 								<p>I am currently based in Leeds, UK.</p>
@@ -73,14 +73,14 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="resume.html">
+									<a href="https://www.linkedin.com/in/matthew-east-a30023b8/">
 										<h2>Résumé</h2>
 										<div class="content">
 											<p>My up to date Résumé.</p>
 										</div>
 									</a>
 								</article>
-								<!--<article class="style4">
+								<article class="style4">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
@@ -113,7 +113,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<!--<article class="style2">
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
