--- a/python.html
+++ b/python.html
@@ -49,10 +49,10 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="python_300days.html">
-										<h2>300 Hours</h2>
+									<a href="covid_19.html">
+										<h2>Covid-19 Data Scraping</h2>
 										<div class="content">
-											<p>300 hours of Python, freecodecamp.org</p>
+											<p>Covid-19 Data Scraping</p>
 										</div>
 									</a>
 								</article>
