--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="https://www.linkedin.com/in/matthew-east-a30023b8/">
-										<h2>Résumé</h2>
+										<h2>Linkedin</h2>
 										<div class="content">
-											<p>My up to date Résumé.</p>
+											<p>Linkedin Profile</p>
 										</div>
 									</a>
 								</article>
-								<article class="style4">
+								<!--<article class="style4">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
@@ -113,7 +113,7 @@
 										</div>
 									</a>
 								</article>
-								<!--<article class="style2">
+								<article class="style2">
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
